<resources>
    <string name="app_name">ELearningApp</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="register_string">Đăng ký</string>
    <string name="app_string">app</string>
    <string name="create_your_account_string">Tạo tài khoản của bạn</string>
    <string name="enter_your_full_name_string">Nhập tên người dùng</string>
    <string name="confirm_password_string">Xác nhận mật khẩu</string>
    <string name="create_password_string">Đặt mật khẩu (Có ít nhất 8 kí tự)</string>
    <string name="enter_you_email_string">Nhập email của bạn</string>
    <string name="do_you_have_an_account__sign_in_string">Bạn đã có tài khoản? Đăng nhập ngay!</string>
    <string name="sent_email_string">Gửi email</string>
    <string name="already_have_an_account__sign_up_string">Bạn chưa có tài khoản? Đăng ký ngay!</string>
    <string name="enter_your_email_string">Enter your email</string>
    <string name="login_string">Đăng nhập</string>
    <string name="forget_password__string">Bạn quên mật khẩu?</string>
    <string name="enter_you_email_ek1_string">Nhập email của bạn</string>
    <string name="welcome_back__string">Welcome back!</string>
    <string name="searchTitle">Khám phá</string>

    <string name="lesson_tongquan">Tổng quan</string>
    <string name="lesson_baihoc">Bài học</string>
    <string name="lessonTitle">Lesson Title</string>
    <string name="courseName">Course Name</string>
    <string name="authorName">Author Name</string>
    <string name="courseIntro">etting the height of the child to match that of a ScrollView parent is contradictory to what the component is meant to do. What we want most of the time is for some dynamic sized content to be scrollable when it is larger than a screen/frame; matching the height with the parent ScrollView would force all the content to be displayed into a fixed frame (the height of the parent) hence invalidating any scrolling functionality.

This also happens when regular direct child components are set to layout_height="match_parent".

If you want the child of the ScrollView to match the height of the parent when there is not enough content, simply set android:fillViewport to true for the ScrollView.
    etting the height of the child to match that of a ScrollView parent is contradictory to what the component is meant to do. What we want most of the time is for some dynamic sized content to be scrollable when it is larger than a screen/frame; matching the height with the parent ScrollView would force all the content to be displayed into a fixed frame (the height of the parent) hence invalidating any scrolling functionality.

This also happens when regular direct child components are set to layout_height="match_parent".

If you want the child of the ScrollView to match the height of the parent when there is not enough content, simply set android:fillViewport to true for the ScrollView.</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_search">Khám phá</string>
    <string name="menu_bookmark">Lưu trữ</string>
    <string name="menu_profile">Người dùng</string>
    <string name="greeting1">Hello, User!</string>
    <string name="greeting2">Hôm nay bạn muốn học gì?</string>
    <string name="mostViewedCourse">Khóa học được theo dõi nhiều nhất</string>
    <string name="seeMore">xem thêm</string>
    <string name="profilePic">Ảnh đại diện</string>
    <string name="continueCourse">Tiếp tục xem</string>
    <string name="mayLikeCourse">Bạn cũng có thể thích</string>
    <string name="voteCourse">Đánh giá khóa học</string>
    <string name="confirm">Xác nhận</string>
    <string name="large_text"></string>
    <string name="cancel">Hủy bỏ</string>
</resources>