<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent" >


			<View
				android:id="@+id/_bg__login"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/_bg__login_shape" />

			<RelativeLayout android:id="@+id/button"
				android:layout_marginTop="481dp"
				android:layout_marginStart="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<Button   android:id="@+id/rectangle_257"
					android:background="@drawable/rectangle_257_shape"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="0dp"
					android:layout_width="315dp"
					android:layout_height="54dp"
					android:text="@string/login_string"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/login_color"



					/>

				</RelativeLayout>

			<TextView android:id="@+id/app"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="32sp"
				android:textColor="@color/app_color"
				android:layout_marginLeft="35dp"
				android:layout_marginTop="112dp"
				android:layout_width="343dp"
				android:layout_height="64.5dp"
				android:text="@string/app_name"
				 />

			<Button
				android:id="@+id/already_have_an_account__sign_up"
				android:layout_width="332dp"
				android:layout_height="55dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="548dp"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/already_have_an_account__sign_up_string"
				android:textColor="@color/forget_password__color"
				android:textSize="16sp" />



			<EditText   android:id="@+id/rectangle_259"
				android:background="@drawable/rectangle_259_shape"
				 android:layout_marginStart="50dp"
				android:layout_marginTop="338dp"
				android:layout_width="300dp"
				android:layout_height="57dp"
				android:text="@string/enter_you_email_ek1_string"
				android:inputType="textPassword"
				android:gravity="center"

				/>


			<Button
				android:id="@+id/forget_password_"
				android:layout_width="197dp"
				android:layout_height="55dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="100dp"
				android:layout_marginTop="409dp"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/forget_password__string"
				android:textColor="@color/forget_password__color"
				android:textSize="16sp" />


			<EditText   android:id="@+id/rectangle_262"
				android:background="@drawable/rectangle_262_shape"
				 android:layout_marginStart="50dp"
				android:layout_marginTop="268dp"
				android:layout_width="300dp"
				android:layout_height="57dp"
				android:text="@string/enter_you_email_ek1_string"
				android:gravity="center"
				android:inputType="textEmailAddress"

				/>



			<TextView android:id="@+id/welcome_back_"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="24sp"
				android:textColor="@color/app_color"
				android:layout_marginLeft="50dp"
				android:layout_marginTop="185dp"
				android:layout_width="312dp"
				android:layout_height="42dp"
				android:text="@string/welcome_back__string"
				 />

			<ImageView android:id="@+id/vector"
				android:src="@drawable/vector"
				android:contentDescription="vector"
				 android:layout_marginStart="23dp"
				android:layout_marginTop="35dp"
				android:layout_width="21.88dp"
				android:layout_height="21.32dp" />

		</RelativeLayout>

</LinearLayout>
