<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">


    <ImageButton
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Nhập thông tin của bạn để bắt đầu việc học ngay hôm nay"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_your_full_name_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/nhapEmail"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_you_email_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/create_password_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nhapEmail"
        android:inputType="text|textPassword" />

    <EditText
        android:id="@+id/cfpassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/confirm_password_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:inputType="text|textPassword" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/register_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cfpassword" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:text="@string/do_you_have_an_account__sign_in_string"
        android:textColor="@color/forget_password__color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register" />


</androidx.constraintlayout.widget.ConstraintLayout>

