<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/topPadding"
    android:paddingEnd="@dimen/padding"
    android:paddingBottom="@dimen/padding">

    <TextView
        android:id="@+id/voteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gilroybold"
        android:text="@string/voteCourse"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/voteCourseImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/voteCourseImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/voteCourseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/voteCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroybold"
        android:text="@string/courseName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/voteCourseAuthor"
        app:layout_constraintEnd_toEndOf="@+id/voteCourseImg"
        app:layout_constraintStart_toStartOf="@+id/voteCourseImg"
        app:layout_constraintTop_toBottomOf="@+id/voteCourseImg" />

    <TextView
        android:id="@+id/voteCourseAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gilroyregular"
        android:text="@string/authorName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout20"
        app:layout_constraintEnd_toEndOf="@+id/voteCourseImg"
        app:layout_constraintStart_toStartOf="@+id/voteCourseImg"
        app:layout_constraintTop_toBottomOf="@+id/voteCourseName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/voteComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteCourseAuthor">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/voteComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Nhập bình luận của bạn"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout20" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>